--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ main {
 
 @media (max-width: 900px) {
 	:root {
-		font-size: 17px;
+		font-size: 16px;
 	}
 
 	main {
